ash/mash: Fix painting of status-tray bubble.

Change NativeWidgetMus::GetLayer() to return the correct ui::Layer, to make sure
that the layer-tree for the Views in a Widget is added a child to the Layer
associated with the Widget.

BUG=598914

Review URL: https://codereview.chromium.org/1864953002

Cr-Commit-Position: refs/heads/master@{#385463}

Former-commit-id: 336b3700484b2fba745b756f22ea85db854e0c10